--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -9,6 +9,7 @@
          method="POST"
          class="validated-form"
          novalidate
+         enctype="multipart/form-data"
       >
          <div class="mb-3">
             <label for="title" class="form-label">Title</label>
@@ -39,14 +40,13 @@
          </div>
 
          <div class="mb-3">
-            <label for="image" class="form-label">Image Url</label>
+            <label for="image" class="form-label">Add more images</label>
             <input
-               type="text"
+               type="file"
                id="image"
                class="form-control"
-               name="campground[image]"
-               value="<%= campground.image %>"
-               required
+               name="image"
+               multiple
             />
             <div class="valid-feedback">Looks good!</div>
          </div>
@@ -82,6 +82,25 @@
 <%=campground.description%></textarea
             >
             <div class="valid-feedback">Looks good!</div>
+         </div>
+
+         <div class="mb-3 d-flex justify-content-between">
+            <% campground.images.forEach(function(img, i) {%>
+            <div class="d-inline-block">
+               <div>
+                  <div class="form-check-inline">
+                     <input
+                        type="checkbox"
+                        id="image-<%=i%>"
+                        name="deleteImages[]"
+                        value="<%=img.filename%>"
+                     />
+                  </div>
+                  <label for="image-<%=i%>">Delete?</label>
+               </div>
+               <img src="<%= img.thumbnail %> " class="img-thumbnail" alt="" />
+            </div>
+            <% }) %>
          </div>
 
          <div class="mb-3">
