--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,6 +11,12 @@
          crossorigin="anonymous"
       />
 
+      <script src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
+      <link
+         href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
+         rel="stylesheet"
+      />
+
       <title>YelpCamp</title>
    </head>
    <body class="d-flex flex-column vh-100">
