--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -80,7 +80,7 @@
 
    <div class="col-md-6">
       <!-- Map Box -->
-      <div class="mb-3" id="map" style="width: 100%; height: 400px"></div>
+      <div class="mb-3 map" id="map"></div>
       <!-- Review form -->
       <% if(currentUser) {%>
       <h3>Leave a Review</h3>
