--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<div id="map" style="width: 100%; height: 400px"></div>
+<div id="cluster-map" class="cluster-map""></div>
 
 <h1>All Campgrounds</h1>
 
