--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,6 +16,7 @@
          href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
          rel="stylesheet"
       />
+      <link rel="stylesheet" href="/stylesheet/app.css" />
 
       <title>YelpCamp</title>
    </head>
