--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,33 +1,47 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="col-md-6 offset-md-3">
-   <h1 class="text-center mb-3">Login</h1>
-   <form action="/login" method="POST" class="validated-form" novalidate>
-      <div class="mb-3">
-         <label for="username" class="form-label">Username</label>
-         <input
-            type="text"
-            id="username"
-            class="form-control"
-            name="username"
-            required
-         />
-         <div class="valid-feedback">Looks good!</div>
-         <div class="invalid-feedback">Please enter a valid username.</div>
-      </div>
+<div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+   <div class="card shadow">
+      <img
+         src="https://images.unsplash.com/photo-1625834509314-3b12c6153624?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1778&q=80"
+         alt="camping"
+         class="card-img-top"
+      />
+      <div class="card-body">
+         <h2 class="card-title mb-3">Login</h2>
+         <form action="/login" method="POST" class="validated-form" novalidate>
+            <div class="mb-3">
+               <label for="username" class="form-label">Username</label>
+               <input
+                  type="text"
+                  id="username"
+                  class="form-control"
+                  name="username"
+                  autofocus
+                  required
+               />
+               <div class="valid-feedback">Looks good!</div>
+               <div class="invalid-feedback">
+                  Please enter a valid username.
+               </div>
+            </div>
 
-      <div class="mb-3">
-         <label for="password" class="form-label">Password</label>
-         <input
-            type="password"
-            id="password"
-            class="form-control"
-            name="password"
-            required
-         />
-         <div class="valid-feedback">Looks good!</div>
-         <div class="invalid-feedback">Please enter a password.</div>
+            <div class="mb-3">
+               <label for="password" class="form-label">Password</label>
+               <input
+                  type="password"
+                  id="password"
+                  class="form-control"
+                  name="password"
+                  required
+               />
+               <div class="valid-feedback">Looks good!</div>
+               <div class="invalid-feedback">Please enter a password.</div>
+            </div>
+            <div class="d-grid mt-4">
+               <button class="btn btn-success">Login</button>
+            </div>
+         </form>
       </div>
-      <button class="btn btn-success">Register</button>
-   </form>
+   </div>
 </div>
