--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,9 +4,11 @@
    <div class="col-10 offset-1">
       <div class="alert alert-danger" role="alert">
          <h4 class="alert-heading"><%= err.message %></h4>
+         <% if (process.env.NODE_ENV !== 'production') {%>
          <p><%= err.stack %></p>
+         <% } %>
          <hr />
-         <p class="mb-0"><%= err.statusCode %> : <%= err.message %></p>
+         <p class="mb-0"><%= err.statusCode %></p>
       </div>
    </div>
 </div>
