--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-   <div class="card shadow">
+   <div class="card shadow mt-5">
       <img
          src="https://images.unsplash.com/photo-1625834509314-3b12c6153624?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1778&q=80"
          alt="camping"
