--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,115 +1,121 @@
 <% layout('layouts/boilerplate') %>
 
-<!-- New Form -->
-<div class="row">
-   <h1 class="text-center">Edit Campground</h1>
-   <div class="col-lg-6 offset-lg-3">
-      <form
-         action="/campgrounds/<%= campground._id %>?_method=PUT"
-         method="POST"
-         class="validated-form"
-         novalidate
-         enctype="multipart/form-data"
-      >
-         <div class="mb-3">
-            <label for="title" class="form-label">Title</label>
-            <input
-               type="text"
-               id="title"
-               class="form-control"
-               name="campground[title]"
-               value="<%= campground.title %>"
-               required
-            />
-            <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback">Please enter a title.</div>
-         </div>
-
-         <div class="mb-3">
-            <label for="location" class="form-label">Location</label>
-            <input
-               type="text"
-               id="location"
-               class="form-control"
-               name="campground[location]"
-               value="<%= campground.location %>"
-               required
-            />
-            <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback">Please enter a location.</div>
-         </div>
-
-         <div class="mb-3">
-            <label for="image" class="form-label">Add more images</label>
-            <input
-               type="file"
-               id="image"
-               class="form-control"
-               name="image"
-               multiple
-            />
-            <div class="valid-feedback">Looks good!</div>
-         </div>
-
-         <div class="mb-3">
-            <label for="price" class="form-label">Campground Price</label>
-            <div class="input-group">
-               <span class="input-group-text">$</span>
+<div class="container my-5">
+   <!-- New Form -->
+   <div class="row">
+      <h1 class="text-center">Edit Campground</h1>
+      <div class="col-lg-6 offset-lg-3">
+         <form
+            action="/campgrounds/<%= campground._id %>?_method=PUT"
+            method="POST"
+            class="validated-form"
+            novalidate
+            enctype="multipart/form-data"
+         >
+            <div class="mb-3">
+               <label for="title" class="form-label">Title</label>
                <input
-                  id="price"
                   type="text"
+                  id="title"
                   class="form-control"
-                  placeholder="0.00"
-                  name="campground[price]"
-                  value="<%= campground.price %>"
+                  name="campground[title]"
+                  value="<%= campground.title %>"
                   required
-                  aria-label="Amount (to the nearest dollar)"
+               />
+               <div class="valid-feedback">Looks good!</div>
+               <div class="invalid-feedback">Please enter a title.</div>
+            </div>
+
+            <div class="mb-3">
+               <label for="location" class="form-label">Location</label>
+               <input
+                  type="text"
+                  id="location"
+                  class="form-control"
+                  name="campground[location]"
+                  value="<%= campground.location %>"
+                  required
+               />
+               <div class="valid-feedback">Looks good!</div>
+               <div class="invalid-feedback">Please enter a location.</div>
+            </div>
+
+            <div class="mb-3">
+               <label for="image" class="form-label">Add more images</label>
+               <input
+                  type="file"
+                  id="image"
+                  class="form-control"
+                  name="image"
+                  multiple
                />
                <div class="valid-feedback">Looks good!</div>
             </div>
-         </div>
 
-         <div class="mb-3">
-            <label for="description" class="form-label">Description</label>
-            <textarea
-               type="text"
-               id="description"
-               class="form-control"
-               name="campground[description]"
-               rows="6"
-               required
-            >
-<%=campground.description%></textarea
-            >
-            <div class="valid-feedback">Looks good!</div>
-         </div>
-
-         <div class="mb-3 d-flex justify-content-between">
-            <% campground.images.forEach(function(img, i) {%>
-            <div class="d-inline-block">
-               <div>
-                  <div class="form-check-inline">
-                     <input
-                        type="checkbox"
-                        id="image-<%=i%>"
-                        name="deleteImages[]"
-                        value="<%=img.filename%>"
-                     />
-                  </div>
-                  <label for="image-<%=i%>">Delete?</label>
+            <div class="mb-3">
+               <label for="price" class="form-label">Campground Price</label>
+               <div class="input-group">
+                  <span class="input-group-text">$</span>
+                  <input
+                     id="price"
+                     type="text"
+                     class="form-control"
+                     placeholder="0.00"
+                     name="campground[price]"
+                     value="<%= campground.price %>"
+                     required
+                     aria-label="Amount (to the nearest dollar)"
+                  />
+                  <div class="valid-feedback">Looks good!</div>
                </div>
-               <img src="<%= img.thumbnail %> " class="img-thumbnail" alt="" />
             </div>
-            <% }) %>
-         </div>
 
-         <div class="mb-3">
-            <button class="btn btn-success">Update Campground</button>
-         </div>
-      </form>
+            <div class="mb-3">
+               <label for="description" class="form-label">Description</label>
+               <textarea
+                  type="text"
+                  id="description"
+                  class="form-control"
+                  name="campground[description]"
+                  rows="6"
+                  required
+               >
+<%=campground.description%></textarea
+               >
+               <div class="valid-feedback">Looks good!</div>
+            </div>
 
-      <div>
-         <a href="/campgrounds">Back To All campgrounds</a>
+            <div class="mb-3 d-flex justify-content-between">
+               <% campground.images.forEach(function(img, i) {%>
+               <div class="d-inline-block">
+                  <div>
+                     <div class="form-check-inline">
+                        <input
+                           type="checkbox"
+                           id="image-<%=i%>"
+                           name="deleteImages[]"
+                           value="<%=img.filename%>"
+                        />
+                     </div>
+                     <label for="image-<%=i%>">Delete?</label>
+                  </div>
+                  <img
+                     src="<%= img.thumbnail %> "
+                     class="img-thumbnail"
+                     alt=""
+                  />
+               </div>
+               <% }) %>
+            </div>
+
+            <div class="mb-3">
+               <button class="btn btn-success">Update Campground</button>
+            </div>
+         </form>
+
+         <div>
+            <a href="/campgrounds">Back To All campgrounds</a>
+         </div>
       </div>
    </div>
 </div>
