--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -22,7 +22,7 @@
    </head>
    <body class="d-flex flex-column vh-100">
       <%- include('../partials/navbar') %>
-      <main class="container mt-5 mb-5">
+      <main class="mb-5">
          <div class="col-lg-8 offset-lg-2">
             <%- include('../partials/flash') %>
          </div>
